@@ -3,6 +3,9 @@ Thu Jun 15 11:09:34 BST 2000 Ian Grant <Ian.Grant@cl.cam.ac.uk>
 
         * libpostgres.c: Fixed use of deprecated scm_smobfuns struct.
 
+        * libpostgres.c configure.in doc/guile-pg.texi
+          test/guile-pg-basic-tests.scm.in: Added pg-oid-value function.
+          
 Fri Jun  2 10:30:43 BST 2000 Ian Grant <Ian.Grant@cl.cam.ac.uk>
 
         * NEW FILE: ANNOUNCE
